# dhis2-era5land

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.ghcr.yml  compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: configuration.md  docker.md  index.md  scheduling.md  usage.md
scripts/: docker-entrypoint.sh
src/dhis2_era5land/: __init__.py  __main__.py  cli.py  importer.py  main.py  models.py  server.py  settings.py  transforms.py
tests/: test_api.py  test_cli.py  test_transforms.py
